--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -66,6 +66,9 @@
 	&.purple {
 		background-color: #DCBDF9;
 	}
+	svg {
+		pointer-events: none;
+	}
 }
 
 // Animation-specific card stuff
